upd: chatGPT gene img
